--- a/meltano.yml
+++ b/meltano.yml
@@ -9,36 +9,18 @@ plugins:
   extractors:
   - name: tap-facebook
     variant: singer-io
+    pip_url: git+https://github.com/singer-io/tap-facebook.git
     config:
       location: EU
       add_metadata_columns: true
       credentials_path: ${CREDENTIALS_FILE_PATH}
-      start_date: "2023-01-01T00:00:00Z"
+      start_date: '2024-01-30T00:00:00Z'
       access_token: ${ACCESS_TOKEN}
-      api_version: "v16.0"
-      include_deleted: "false"
+      api_version: v16.0
+      include_deleted: 'false'
       insights_buffer_days: 7
       account_id: ${ACC_ID}
     select:
-    - ads.account_id
-    - ads.adlabels
-    - ads.adset_id
-    - ads.bid_amount
-    - ads.bid_info
-    - ads.bid_type
-    - ads.campaign_id
-    - ads.conversion_specs
-    - ads.created_time
-    - ads.creative
-    - ads.effective_status
-    - ads.id
-    - ads.name
-    - ads.recommendations
-    - ads.source_ad_id
-    - ads.status
-    - ads.targeting
-    - ads.tracking_specs
-    - ads.updated_time
     - ads_insights.account_id
     - ads_insights.account_name
     - ads_insights.action_values
@@ -69,162 +51,9 @@ plugins:
     - ads_insights.video_p50_watched_actions
     - ads_insights.video_p75_watched_actions
     - ads_insights.website_ctr
-    - ads_insights_age_and_gender.account_id
-    - ads_insights_age_and_gender.account_name
-    - ads_insights_age_and_gender.action_values
-    - ads_insights_age_and_gender.actions
-    - ads_insights_age_and_gender.ad_id
-    - ads_insights_age_and_gender.ad_name
-    - ads_insights_age_and_gender.adset_id
-    - ads_insights_age_and_gender.adset_name
-    - ads_insights_age_and_gender.age
-    - ads_insights_age_and_gender.campaign_id
-    - ads_insights_age_and_gender.campaign_name
-    - ads_insights_age_and_gender.canvas_avg_view_percent
-    - ads_insights_age_and_gender.canvas_avg_view_time
-    - ads_insights_age_and_gender.clicks
-    - ads_insights_age_and_gender.conversion_values
-    - ads_insights_age_and_gender.conversions
-    - ads_insights_age_and_gender.date_start
-    - ads_insights_age_and_gender.date_stop
-    - ads_insights_age_and_gender.gender
-    - ads_insights_age_and_gender.impressions
-    - ads_insights_age_and_gender.inline_link_clicks
-    - ads_insights_age_and_gender.inline_post_engagement
-    - ads_insights_age_and_gender.objective
-    - ads_insights_age_and_gender.outbound_clicks
-    - ads_insights_age_and_gender.social_spend
-    - ads_insights_age_and_gender.spend
-    - ads_insights_age_and_gender.video_30_sec_watched_actions
-    - ads_insights_age_and_gender.video_p100_watched_actions
-    - ads_insights_age_and_gender.video_p25_watched_actions
-    - ads_insights_age_and_gender.video_p50_watched_actions
-    - ads_insights_age_and_gender.video_p75_watched_actions
-    - ads_insights_age_and_gender.website_ctr
-    - ads_insights_country.account_id
-    - ads_insights_country.account_name
-    - ads_insights_country.action_values
-    - ads_insights_country.actions
-    - ads_insights_country.ad_id
-    - ads_insights_country.ad_name
-    - ads_insights_country.adset_id
-    - ads_insights_country.adset_name
-    - ads_insights_country.campaign_id
-    - ads_insights_country.campaign_name
-    - ads_insights_country.canvas_avg_view_percent
-    - ads_insights_country.canvas_avg_view_time
-    - ads_insights_country.clicks
-    - ads_insights_country.conversion_values
-    - ads_insights_country.conversions
-    - ads_insights_country.country
-    - ads_insights_country.date_start
-    - ads_insights_country.date_stop
-    - ads_insights_country.impressions
-    - ads_insights_country.inline_link_clicks
-    - ads_insights_country.inline_post_engagement
-    - ads_insights_country.objective
-    - ads_insights_country.outbound_clicks
-    - ads_insights_country.social_spend
-    - ads_insights_country.spend
-    - ads_insights_country.video_30_sec_watched_actions
-    - ads_insights_country.video_p100_watched_actions
-    - ads_insights_country.video_p25_watched_actions
-    - ads_insights_country.video_p50_watched_actions
-    - ads_insights_country.video_p75_watched_actions
-    - ads_insights_country.website_ctr
-    - ads_insights_platform_and_device.account_id
-    - ads_insights_platform_and_device.account_name
-    - ads_insights_platform_and_device.action_values
-    - ads_insights_platform_and_device.actions
-    - ads_insights_platform_and_device.ad_id
-    - ads_insights_platform_and_device.ad_name
-    - ads_insights_platform_and_device.adset_id
-    - ads_insights_platform_and_device.adset_name
-    - ads_insights_platform_and_device.campaign_id
-    - ads_insights_platform_and_device.campaign_name
-    - ads_insights_platform_and_device.canvas_avg_view_percent
-    - ads_insights_platform_and_device.canvas_avg_view_time
-    - ads_insights_platform_and_device.clicks
-    - ads_insights_platform_and_device.conversion_values
-    - ads_insights_platform_and_device.conversions
-    - ads_insights_platform_and_device.date_start
-    - ads_insights_platform_and_device.date_stop
-    - ads_insights_platform_and_device.impression_device
-    - ads_insights_platform_and_device.impressions
-    - ads_insights_platform_and_device.inline_link_clicks
-    - ads_insights_platform_and_device.inline_post_engagement
-    - ads_insights_platform_and_device.objective
-    - ads_insights_platform_and_device.outbound_clicks
-    - ads_insights_platform_and_device.placement
-    - ads_insights_platform_and_device.platform_position
-    - ads_insights_platform_and_device.publisher_platform
-    - ads_insights_platform_and_device.social_spend
-    - ads_insights_platform_and_device.spend
-    - ads_insights_platform_and_device.video_30_sec_watched_actions
-    - ads_insights_platform_and_device.video_p100_watched_actions
-    - ads_insights_platform_and_device.video_p25_watched_actions
-    - ads_insights_platform_and_device.video_p50_watched_actions
-    - ads_insights_platform_and_device.video_p75_watched_actions
-    - ads_insights_platform_and_device.website_ctr
-    - ads_insights_region.account_id
-    - ads_insights_region.account_name
-    - ads_insights_region.action_values
-    - ads_insights_region.actions
-    - ads_insights_region.ad_id
-    - ads_insights_region.ad_name
-    - ads_insights_region.adset_id
-    - ads_insights_region.adset_name
-    - ads_insights_region.campaign_id
-    - ads_insights_region.campaign_name
-    - ads_insights_region.canvas_avg_view_percent
-    - ads_insights_region.canvas_avg_view_time
-    - ads_insights_region.clicks
-    - ads_insights_region.conversion_values
-    - ads_insights_region.conversions
-    - ads_insights_region.date_start
-    - ads_insights_region.date_stop
-    - ads_insights_region.impressions
-    - ads_insights_region.inline_link_clicks
-    - ads_insights_region.inline_post_engagement
-    - ads_insights_region.objective
-    - ads_insights_region.outbound_clicks
-    - ads_insights_region.region
-    - ads_insights_region.social_spend
-    - ads_insights_region.spend
-    - ads_insights_region.video_30_sec_watched_actions
-    - ads_insights_region.video_p100_watched_actions
-    - ads_insights_region.video_p25_watched_actions
-    - ads_insights_region.video_p50_watched_actions
-    - ads_insights_region.video_p75_watched_actions
-    - ads_insights_region.website_ctr
-    - adsets.account_id
-    - adsets.adlabels
-    - adsets.bid_info
-    - adsets.budget_remainin
-    - adsets.campaign_id
-    - adsets.created_time
-    - adsets.daily_budget
-    - adsets.effective_status
-    - adsets.end_time
-    - adsets.id
-    - adsets.lifetime_budget
-    - adsets.name
-    - adsets.promoted_object
-    - adsets.start_time
-    - adsets.targeting
-    - adsets.updated_time
-    - campaigns.account_id
-    - campaigns.adlabels
-    - campaigns.ads
-    - campaigns.buying_type
-    - campaigns.effective_status
-    - campaigns.id
-    - campaigns.name
-    - campaigns.objective
-    - campaigns.spend_cap
-    - campaigns.start_time
-    - campaigns.updated_time
-    pip_url: git+https://github.com/singer-io/tap-facebook.git
+  - name: tap-shopify
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/tap-shopify.git@v0.3.1
   loaders:
   - name: target-bigquery
     variant: adswerve
@@ -232,3 +61,7 @@ plugins:
     config:
       project_id: ${PROJ_ID}
       dataset_id: ${DATA_ID}
+jobs:
+- name: tap-facebook-europe-to-bigquery
+  tasks:
+  - tap-facebook target-bigquery
